--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: VA Bayreuth 2015 - Informatikkurs
 email: contact.daviddao@gmail.com
 description: "Skript für den Informatikkurs der VA Bayreuth 2015"
 baseurl: ""
-url: ""
+url: "http://vacademy.xyz/skript"
 twitter_username: 
 github_username:  
 
