--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: VA Bayreuth 2015 - Informatikkurs
 email: contact.daviddao@gmail.com
-description: "Skript für den Informatikkurs der VA Bayreuth 2015"
+description: "Skript für den Informatikkurs der VA Ruhr 2016"
 baseurl: "http://vacademy.xyz/skript"
 url: "http://vacademy.xyz/skript"
 twitter_username: 
