--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: VA Bayreuth 2015 - Informatikkurs
+title: VA Ruhr 2016 - Informatikkurs
 email: contact.daviddao@gmail.com
 description: "Skript für den Informatikkurs der VA Ruhr 2016"
 baseurl: "http://vacademy.xyz/skript"
